--- a/src/elements/typology/title/Title.scss
+++ b/src/elements/typology/title/Title.scss
@@ -3,7 +3,6 @@
   padding-bottom: 1rem;
   margin: 2rem 0 0.6rem 0;
   position: relative;
-  z-index: 1;
   font-size: 1.25rem;
 
   &:after {
